Add react-native-bootsplash. Integrate app icon, and update app name.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">PatientDataManager</string>
+    <string name="app_name">Patients Manager</string>
 </resources>
